# temperature-forecasting

./: README.md  pyproject.toml
data/processed/: dataset_info.json  scalers.joblib  times_test.npy  times_train.npy  times_val.npy  y_test.npy  y_train.npy  y_val.npy
data/raw/: weather_Paris_hourly.csv
models/: cnn1d.keras  gru.keras  mlp.keras  ridge.joblib
reports/: metrics.csv  metrics_latex_table.txt  predictions_test.csv  train_config.json
reports/histories/: history_cnn1d.json  history_gru.json  history_mlp.json
src/: config.py  download_data.py  evaluate.py  models.py  plot_results.py  preprocess.py  train.py
tests/: test_download_data.py
