[tool.poetry]
name = "temperature-forecasting"
version = "0.1.0"
description = ""
authors = ["Clément Lévêque <clementleveque911@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.13"
tensorflow = "^2.21.0"
numpy = "^2.4.4"
pandas = "^3.0.2"
requests = "^2.33.1"
matplotlib = "^3.10.9"
scikit-learn = "^1.8.0"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
